# robot24

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  frames.gv  package.xml
Eye_in_hand/: CMakeLists.txt  README.md  package.xml
Eye_in_hand/config/: auto_poses.yaml  calibration_params.yaml
Eye_in_hand/launch/: aruco_detect.launch  eye_in_hand_auto_calibrate.launch  eye_in_hand_calibrate.launch  publish_calibration.launch
Eye_in_hand/scripts/: auto_sample.py
Eyou_Canopen_Master/: .gitignore  CMakeLists.txt  README.md  package.xml
Eyou_Canopen_Master/config/: YiyouServo_V1.4.dcfgen.eds  YiyouServo_V1.4.dcfgen.eds.txt  joints.yaml  joints_arm2_only.yaml  joints_flipper_4axis.yaml  master.dcf  master.dcf.bak_diag  master.yaml  master_arm2_only.yaml  master_flipper_4axis.dcf  master_flipper_4axis.yaml
Eyou_Canopen_Master/docs/: 2026-03-21_canopen_pdo_boot_diagnosis_report.md  2026-03-21_controller_manager_blocking_bug_report.md  2026-03-21_dcf_urdf_fix.md  2026-03-22_canopen_integration_summary_and_fix_plan.md  2026-03-22_csp_is_operational_bug_report.md  2026-03-25_现行安全行为规范.md  README.md  api_reference.md  command_cheatsheet.md  fault_injection_checklist.md  gap_report_engineering_completeness.md  ip_follow_joint_trajectory_executor.md  project_overview.md  quality_review_2026-03-19.md  release_readiness.md  ros_adapter_plan.md  soak_test_plan.md  usage.md  yaml_config_guide.md  电机配置变更指南.md
Eyou_Canopen_Master/launch/: bringup.launch  bringup_flipper_4axis.launch  canopen_hw.launch  canopen_hw_flipper_4axis.launch
Eyou_Canopen_Master/scripts/: joint_action_ui.py  plot_ruckig_profile.py
Eyou_Canopen_Master/src/: axis_driver.cpp  axis_logic.cpp  boot_identity_diag.cpp  canopen_aux_services.cpp  canopen_hw_ros_node.cpp  canopen_master.cpp  canopen_robot_hw.cpp  canopen_robot_hw_ros.cpp  cia402_protocol.cpp  cia402_state_machine.cpp  diagnostics_collector.cpp  joints_config.cpp  lifecycle_manager.cpp  main.cpp  operational_coordinator.cpp  pdo_mapping.cpp  realtime_loop.cpp  sdo_accessor.cpp  service_gateway.cpp  shared_state.cpp  urdf_joint_limits.cpp  zero_soft_limit_executor.cpp
Eyou_Canopen_Master/srv/: ApplyLimits.srv  SetMode.srv  SetZero.srv
Eyou_Canopen_Master/test/: test_axis_logic.cpp  test_boot_identity_diag.cpp  test_boundary_cases.cpp  test_canopen_master.cpp  test_canopen_robot_hw.cpp  test_canopen_robot_hw_ros.cpp  test_diagnostics_collector.cpp  test_ip_follow_joint_trajectory_executor.cpp  test_joints_config.cpp  test_lifecycle_manager.cpp  test_manual_control.cpp  test_multi_mode.cpp  test_operational_coordinator.cpp  test_pdo_mapping.cpp  test_position_channel_routing.cpp  test_realtime_loop.cpp  test_sdo_accessor.cpp  test_sdo_single_flight.cpp  test_shared_state.cpp  test_shared_state_concurrent.cpp  test_startup_integration.cpp  test_state_machine.cpp  test_unit_conversion.cpp  test_urdf_joint_limits.cpp  test_zero_soft_limit_executor.cpp
Eyou_Canopen_Master/urdf/: robot.urdf
Eyou_ROS1_Master/: CMakeLists.txt  README.md  package.xml
Eyou_ROS1_Master/config/: can_driver_hybrid.yaml  can_driver_joints_arm4_can1_only.yaml  can_driver_joints_arm_can1_only.yaml  can_driver_joints_arm_only.yaml  can_driver_joints_arm_rear4_only.yaml  can_driver_joints_arm_rear5_only.yaml  can_driver_joints_can1_only.yaml  controllers_jtc.yaml  controllers_jtc_rear4.yaml  controllers_jtc_rear5.yaml  controllers_minimal.yaml  hybrid_joint_limits.yaml  joint_mode_mappings.yaml  ruckig_executor.yaml
Eyou_ROS1_Master/docs/: 18_Eyou_ROS1_Master事务一致性问题修复报告_2026-04-09.md  19_Eyou_ROS1_Master事务一致性按commit实施计划_2026-04-09.md  21_Eyou_ROS1_Master剩余问题修复计划_2026-04-09.md  22_统一入口使用说明_2026-04-09.md  23_三电机联调修复实施方案_2026-04-09.md  24_MoveIt_Servo接入与统一Ruckig执行设计_2026-04-12.md  27_Ruckig控制器v2.1完整设计方案_2026-04-14.md  28_Ruckig控制器v2.1按Commit实施路线_2026-04-14.md  29_Ruckig控制器v2.1实现说明与配置指南_2026-04-14.md  30_Ruckig控制器v2.1迁移说明_2026-04-14.md  README.md  实施计划.md
Eyou_ROS1_Master/launch/: hybrid_motor_hw.launch  hybrid_moveit_servo.launch
Eyou_ROS1_Master/msg/: JointRuntimeState.msg  JointRuntimeStateArray.msg  TrajectoryExecutionState.msg
Eyou_ROS1_Master/scripts/: hybrid_joint_action_ui.py
Eyou_ROS1_Master/src/: hybrid_auto_startup.cpp  hybrid_execution_diagnostics.cpp  hybrid_follow_joint_trajectory_executor.cpp  hybrid_ip_executor_config.cpp  hybrid_joint_target_executor.cpp  hybrid_mode_router.cpp  hybrid_motor_hw_node.cpp  hybrid_operational_coordinator.cpp  hybrid_robot_hw.cpp  hybrid_service_gateway.cpp  hybrid_servo_bridge.cpp  hybrid_tolerance_resolver.cpp  hybrid_trajectory_time_sampler.cpp
Eyou_ROS1_Master/srv/: ApplyJointLimits.srv  SetJointMode.srv  SetJointZero.srv
Eyou_ROS1_Master/tests/: test_hybrid_auto_startup.cpp  test_hybrid_execution_diagnostics.cpp  test_hybrid_execution_integration.cpp  test_hybrid_follow_joint_trajectory_executor.cpp  test_hybrid_ip_executor_config.cpp  test_hybrid_joint_target_executor.cpp  test_hybrid_launch_ip_executor.cpp  test_hybrid_launch_ip_executor.test  test_hybrid_launch_smoke.cpp  test_hybrid_launch_smoke.test  test_hybrid_mode_router.cpp  test_hybrid_operational_coordinator.cpp  test_hybrid_service_gateway.cpp  test_hybrid_servo_bridge.cpp  test_hybrid_tolerance_resolver.cpp  test_hybrid_trajectory_time_sampler.cpp
arm_control/: CMakeLists.txt  README.md  package.xml
arm_control/action/: ExecuteArmGoal.action
arm_control/config/: control_params.yaml  goal_executor.yaml
arm_control/docs/: 01_arm_control包设计指南_视觉抓取扩展.md  02_arm_goal_executor按commit实施计划.md  (+2 more)
can_driver/: CATKIN_IGNORE  CMakeLists.txt  README.md  package.xml
can_driver_ui/: CATKIN_IGNORE  CMakeLists.txt  README.md  package.xml
car_control/: CMakeLists.txt  README.md  package.xml
car_urdf/: CMakeLists.txt  README.md  package.xml
control/: CMakeLists.txt  README.md  package.xml
flipper_control/: CMakeLists.txt  README.md  package.xml
mobility_control/: CMakeLists.txt  README.md  package.xml
thermal_camera/: CMakeLists.txt  package.xml  setup.py
vision_pkg/: CMakeLists.txt  README.md  package.xml
yiyou_canopen/: CMakeLists.txt  package.xml
(+449 files in other folders)
