<?xml version="1.0"?>
<package format="2">
  <name>Eye_in_hand</name>
  <version>0.1.0</version>
  <description>
    Eye-in-hand calibration for RealSense D405 mounted on the robot arm (tool0).
    Uses easy_handeye + aruco_ros to estimate the transform tool0 -> paw_camera_color_optical_frame.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- MoveIt for auto sampling -->
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- Camera driver -->
  <exec_depend>realsense2_camera</exec_depend>

  <!-- Calibration toolchain (need to be cloned into catkin_ws/src) -->
  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>easy_handeye</exec_depend>

  <!-- Robot arm driver (provides base_link -> tool0 TF) -->
  <exec_depend>Eyou_ROS1_Master</exec_depend>

  <!-- For publishing static calibration result -->
  <exec_depend>tf2_tools</exec_depend>
</package>
