<?xml version="1.0"?>
<package format="2">
  <name>Eyou_Canopen_Master</name>
  <version>0.1.0</version>
  <description>CANopen robot hardware interface with ros_control adapter</description>
  <maintainer email="2733239989@qq.com">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_updater</depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
