<?xml version="1.0"?>
<package format="2">
  <name>Eyou_ROS1_Master</name>
  <version>0.1.0</version>
  <description>Unified facade node for can_driver (MT/PP) and Eyou_Canopen_Master (CANopen/CiA402) backends under a single controller_manager.</description>
  <maintainer email="2733239989@qq.com">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>std_srvs</depend>
  <depend>can_driver</depend>
  <depend>Eyou_Canopen_Master</depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
