<?xml version="1.0"?>
<package format="2">
  <name>Eyou_ROS1_Master</name>
  <version>0.1.0</version>
  <description>Unified facade node for can_driver (MT/PP) and Eyou_Canopen_Master (CANopen/CiA402) backends under a single controller_manager.</description>
  <maintainer email="2733239989@qq.com">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>can_driver</depend>
  <depend>Eyou_Canopen_Master</depend>

  <exec_depend>car_urdf</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <test_depend>rostest</test_depend>
</package>
