<?xml version="1.0"?>
<package format="2">
  <name>arm_control</name>
  <version>0.0.1</version>
  <description>Upper-layer arm control package for MoveIt goal execution, gripper commands, and Servo input bridges.</description>

  <maintainer email="dianhua@todo.todo">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>car_moveit_config</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_servo</exec_depend>

  <export/>
</package>
