<?xml version="1.0"?>
<package format="2">
  <name>can_driver_ui</name>
  <version>0.0.1</version>
  <description>UI bridge package for single-motor control on can_driver.</description>

  <maintainer email="dianhua@todo.todo">dianhua</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>can_driver</depend>

  <export/>
</package>
